kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      name: web
      labels:
        app:  web
    spec:
      volumes:
        - name: app
          emptyDir:
            sizeLimit: 10Mi
      containers:
      - name: web
        image: ghcr.io/rimix2/dockerfile-test:0.0.1
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket:
            port: 8000
        volumeMounts:
        - mountPath: /app
          name: app
