kubernetes-networks/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    app:  web
spec:
  volumes:
    - name: app
      emptyDir:
        sizeLimit: 10Mi
  containers:
  - name: web
    image: ghcr.io/rimix2/dockerfile-test:0.0.1
    readinessProbe:
      httpGet:
        path: /index.html
        port: 80
    livenessProbe:
      tcpSocket:
        port: 8000
    volumeMounts:
    - mountPath: /app
      name: app
